<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Player_6</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button">Click Me!</string>
	<string name="button2">Select!</string>
    <string name="button3">findLrc!</string>
    <string name="album">专辑</string>
    <string name="singer">歌手</string>
    <string name="folder">文件夹</string>
    <string name="play_list">播放列表</string>
    <string name="title_search">歌曲名称</string>
    <string name="author_search">歌手</string>

    <string name="drawer_open">open  drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="diyin">低音</string>
    <string name="gaoyin">高音</string>
    <string name="liti">立体声</string>
    <string name="media_title">音效设置</string>

    <string name="repeat_all">循环播放</string>
    <string name="repeat_one">单曲循环</string>
    <string name="play_all">顺序播放</string>
    <string name="random">随机播放</string>
</resources>
